--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -2,4 +2,4 @@ configmap:
   port: 8080
 deployment:
   replicas: 2
-  imageVersion: IMAGE_VERSION
+  imageVersion: IMAGE_VERSION # this is called place holder dynamically replaced
